--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,8 +1,9 @@
 This this the changelog file for the Pothos Plotters toolkit.
 
-Release 0.1.0 (pending)
+Release 0.1.0 (2015-12-16)
 ==========================
 
+- Added debian packaging support for plotters toolkit
 - Support start label ID in spectrogram and periodogram
 - Use Spuce window designer in the FFT power spectrum
 - Handle empty version string from FindQwt result
