--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-pothos-plotters (0.1.0-test1) unstable; urgency=low
+pothos-plotters (0.1.0) unstable; urgency=low
 
-  * Release 0.1.0 (pending)
+  * Release 0.1.0 (2015-12-16)
 
- -- Josh Blum <josh@pothosware.com>  Tue, 15 Dec 2015 21:29:11 -0800
+ -- Josh Blum <josh@pothosware.com>  Wed, 16 Dec 2015 16:30:45 -0800
