Added full-scale option to the Periodogram plotter

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,10 @@
 This this the changelog file for the Pothos Plotters toolkit.
 
+Release 0.1.1 (pending)
+==========================
+
+- Added full-scale option to the Periodogram plotter
+
 Release 0.1.0 (2015-12-16)
 ==========================
 
