--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,10 @@
 This this the changelog file for the Pothos Plotters toolkit.
 
+Release 0.1.2 (pending)
+==========================
+
+- Replace use of QwtText in metatype due to Qt unload bug
+
 Release 0.1.1 (2016-05-10)
 ==========================
 
