--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,7 +3,7 @@ This this the changelog file for the Pothos Plotters toolkit.
 Release 0.1.2 (pending)
 ==========================
 
-- Added QwtThermo widget for floating point status display
+- Added QwtThermo and QwtKnob widget to QwtWidgets
 - Added saveState()/restoreState() hooks for all plotters
 - Replace use of QwtText in metatype due to Qt unload bug
 
