--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,6 +3,7 @@ This this the changelog file for the Pothos Plotters toolkit.
 Release 0.1.2 (pending)
 ==========================
 
+- Added color map selection to the Spectrogram plotter
 - Updated Qwt6 submodule to qwt-6.1.3 and renamed directory
 - Added QwtThermo, QwtKnob, and QwtDial widget to QwtWidgets
 - Added saveState()/restoreState() hooks for all plotters
