--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,8 +1,9 @@
 This this the changelog file for the Pothos Plotters toolkit.
 
-Release 0.1.2 (pending)
+Release 0.2.0 (pending)
 ==========================
 
+- Re-factored plotter utils library and changed to 0.2.0
 - Added color map selection to the Spectrogram plotter
 - Updated Qwt6 submodule to qwt-6.1.3 and renamed directory
 - Added QwtThermo, QwtKnob, and QwtDial widget to QwtWidgets
