--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,6 +1,6 @@
 This this the changelog file for the Pothos Plotters toolkit.
 
-Release 0.2.0 (pending)
+Release 0.2.0 (2016-08-02)
 ==========================
 
 - Re-factored plotter utils library and changed to 0.2.0
