--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,10 @@
 This this the changelog file for the Pothos Plotters toolkit.
 
+Release 0.2.1 (pending)
+==========================
+
+- Added missing libpoco-dev to debian Build-Depends
+
 Release 0.2.0 (2016-08-02)
 ==========================
 
