--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,6 +3,7 @@ This this the changelog file for the Pothos Plotters toolkit.
 Release 0.2.1 (pending)
 ==========================
 
+- Fix typo in name of ColorMapEntry registration
 - Added missing libpoco-dev to debian Build-Depends
 
 Release 0.2.0 (2016-08-02)
