--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,10 @@
 This this the changelog file for the Pothos Plotters toolkit.
 
+Release 0.2.2 (pending)
+==========================
+
+- Restore enabled state in thermo setAlarmLevel
+
 Release 0.2.1 (2016-09-24)
 ==========================
 
