--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,10 @@
 This this the changelog file for the Pothos Plotters toolkit.
 
+Release 0.3.0 (pending)
+==========================
+
+- Spectrogram edit widget requires PothosGUI 0.5.0
+
 Release 0.2.2 (pending)
 ==========================
 
