--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,6 +3,7 @@ This this the changelog file for the Pothos Plotters toolkit.
 Release 0.2.2 (pending)
 ==========================
 
+- Consistently use QString format for curve labels
 - Support power spectrum packets in Periodogram
 - Restore enabled state in thermo setAlarmLevel
 
