--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,10 @@
 This this the changelog file for the Pothos Plotters toolkit.
 
+Release 0.3.1 (pending)
+==========================
+
+- Hide wave monitor labels when corresponding curve is hidden
+
 Release 0.3.0 (2017-04-27)
 ==========================
 
