--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,6 +3,7 @@ This this the changelog file for the Pothos Plotters toolkit.
 Release 0.3.1 (pending)
 ==========================
 
+- Added slot for enableXAxis/enableYAxis for thread safety
 - Added clearChannels() slot to wave monitor and periodogram
 - Hide wave monitor labels when corresponding curve is hidden
 
