--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,6 +1,6 @@
 This this the changelog file for the Pothos Plotters toolkit.
 
-Release 0.3.1 (pending)
+Release 0.3.1 (2017-06-22)
 ==========================
 
 - Added slot for enableXAxis/enableYAxis for thread safety
