--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,10 @@
 This this the changelog file for the Pothos Plotters toolkit.
 
+Release 0.4.0 (pending)
+==========================
+
+- Renamed the project repo from pothos-plotters to PothosPlotters
+
 Release 0.3.1 (2017-06-22)
 ==========================
 
