--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,6 +3,7 @@ This this the changelog file for the Pothos Plotters toolkit.
 Release 0.4.0 (pending)
 ==========================
 
+- Replaced use of callVoid() and callProxy() with 0.6 call API
 - Renamed the project repo from pothos-plotters to PothosPlotters
 
 Release 0.3.1 (2017-06-22)
