--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pothos-plotters (0.4.0-1) unstable; urgency=low
+
+  * Release 0.4.0 (2017-12-25)
+
+ -- Josh Blum <josh@pothosware.com>  Mon, 25 Dec 2017 11:32:08 -0000
+
 pothos-plotters (0.3.1-1) unstable; urgency=low
 
   * Release 0.3.1 (2017-06-22)
