--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,10 @@
 This this the changelog file for the Pothos Plotters toolkit.
 
+Release 0.4.1 (pending)
+==========================
+
+- Add relativeFrequencySelected to periodogram and spectrogram
+
 Release 0.4.0 (2017-12-25)
 ==========================
 
