--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,6 +1,6 @@
 This this the changelog file for the Pothos Plotters toolkit.
 
-Release 0.4.1 (pending)
+Release 0.4.1 (2018-04-24)
 ==========================
 
 - Add relativeFrequencySelected to periodogram and spectrogram
