--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,6 +3,8 @@ This this the changelog file for the Pothos Plotters toolkit.
 Release 0.4.2 (pending)
 ==========================
 
+- updated qwt submodule to 6.1.5
+- Update build to support Qt6 and newer cmake target style
 - Support dark themes by allowing plot background default color
 
 Release 0.4.1 (2018-04-24)
