--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,6 +1,6 @@
 This this the changelog file for the Pothos Plotters toolkit.
 
-Release 0.4.2 (pending)
+Release 0.4.2 (2021-07-25)
 ==========================
 
 - updated signal/slots connection style
