--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pothos-plotters (0.4.2-1) unstable; urgency=low
+
+  * Release 0.4.2 (2021-07-25)
+
+ -- Josh Blum <josh@pothosware.com>  Sun, 25 Jul 2021 17:49:34 -0000
+
 pothos-plotters (0.4.1-1) unstable; urgency=low
 
   * Release 0.4.1 (2018-04-24)
